--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
 	"name": "eslint-config",
 	"version": "1.0.0",
-	"description": "",
+	"description": "My config eslint and prettier.",
+	"keywords": [
+		"eslint",
+		"prettier"
+	],
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"homepage": "https://github.com/UserName/package-name",
+	"homepage": "https://github.com/saymondamasio/eslint-config",
+	"bugs": {
+		"url": "https://github.com/saymondamasio/eslint-config/issues",
+		"email": "saymon.damasio95@gmail.com"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/saymondamasio/eslint-config.git"
+	},
+	"license": "MIT",
+	"private": false,
+	"author": "Saymon Damásio <saymon.damasio95@gmail.com> (saymoncode.com)",
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"eslint": "^8.0.1",
