change devDependencies for dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@saymondamasio/eslint-config",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"description": "My config eslint and prettier.",
 	"keywords": [
 		"eslint",
@@ -25,23 +25,9 @@
 		"access": "public",
 		"registry": "https://registry.npmjs.org/"
 	},
+	"prettier": "./.prettierrc.json",
 	"author": "Saymon Damásio <saymon.damasio95@gmail.com> (saymoncode.com)",
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"eslint": "^8.23.1",
-		"eslint-config-google": "^0.14.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-standard-with-typescript": "^23.0.0",
-		"eslint-plugin-import": "^2.25.2",
-		"eslint-plugin-n": "^15.0.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-react": "^7.31.8",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"prettier": "^2.7.1",
-		"typescript": "*"
-	},
-	"peerDependencies": {
+	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"eslint": "^8.23.1",
 		"eslint-config-google": "^0.14.0",
