--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@saymondamasio/eslint-config",
-	"version": "1.0.8",
+	"version": "1.0.9",
 	"description": "My config eslint and prettier.",
 	"keywords": [
 		"eslint",
@@ -34,6 +34,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard-with-typescript": "^23.0.0",
 		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-n": "^15.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
