--- a/package.json
+++ b/package.json
@@ -27,19 +27,25 @@
 	},
 	"author": "Saymon Damásio <saymon.damasio95@gmail.com> (saymoncode.com)",
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.25.0",
-		"eslint": "^8.23.1",
-		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-standard-with-typescript": "^23.0.0",
-		"eslint-plugin-import": "^2.25.2",
+		"eslint-import-resolver-typescript": "^3.5.3",
+		"eslint-plugin-cypress": "^2.13.2",
+		"eslint-plugin-jest-dom": "^4.0.3",
 		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"eslint-plugin-n": "^15.0.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-react": "^7.31.8",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react-hooks": "^4.5.0",
+		"eslint-plugin-storybook": "^0.6.11",
+		"eslint-plugin-tailwindcss": "^3.12.1",
+		"eslint-plugin-testing-library": "^5.9.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.11",
+		"eslint": "^8.23.1",
+		"eslint-config-standard-with-typescript": "^35.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.2.5",
+		"eslint-plugin-promise": "^6.0.1",
+		"eslint-plugin-react": "^7.32.2",
+		"typescript": "*",
 		"prettier": "^2.7.1"
 	},
 	"peerDependencies": {
