--- a/package.json
+++ b/package.json
@@ -28,26 +28,23 @@
 	},
 	"author": "Saymon Damásio <saymon.damasio95@gmail.com> (saymoncode.com)",
 	"dependencies": {
-		"@typescript-eslint/parser": "^5.25.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-import-resolver-typescript": "^3.5.3",
-		"eslint-plugin-cypress": "^2.13.2",
-		"eslint-plugin-jest-dom": "^4.0.3",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react-hooks": "^4.5.0",
-		"eslint-plugin-storybook": "^0.6.11",
-		"eslint-plugin-tailwindcss": "^3.12.1",
-		"eslint-plugin-testing-library": "^5.9.1",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"eslint": "^8.23.1",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
+		"eslint": "^8.49.0",
+		"eslint-config-next": "^13.4.19",
+		"eslint-config-prettier": "^8.10.0",
 		"eslint-config-standard-with-typescript": "^35.0.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^15.2.5",
-		"eslint-plugin-promise": "^6.0.1",
-		"eslint-plugin-react": "^7.32.2",
-		"typescript": "*",
-		"prettier": "^2.7.1"
+		"eslint-import-resolver-typescript": "^3.6.0",
+		"eslint-plugin-import": "^2.28.1",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-tailwindcss": "^3.13.0",
+		"eslint-plugin-testing-library": "^5.11.1",
+		"prettier": "^2.8.8"
 	},
 	"peerDependencies": {
 		"eslint": "^8.23.1",
