--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 	],
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"patch-release": "npm version patch && npm publish && git push --follow-tags"
+		"patch-release": "npm version patch && npm publish && git push --follow-tags",
+		"minor-release": "npm version minor && npm publish && git push --follow-tags"
 	},
 	"homepage": "https://github.com/saymondamasio/eslint-config",
 	"bugs": {
